--- a/src/app/libro/editarlibro/editarlibro.component.html
+++ b/src/app/libro/editarlibro/editarlibro.component.html
@@ -36,11 +36,7 @@
         />
       </div>
     </form>
-    <button
-      type="button"
-      (click)="actualizarLibro(name, isbn, id_autor, book.id)"
-      class="btn btn-danger"
-    >
+    <button type="button" (click)="actualizarLibro()" class="btn btn-danger">
       Guardar
     </button>
   </div>
