--- a/src/app/libro/addlibro/addlibro.component.html
+++ b/src/app/libro/addlibro/addlibro.component.html
@@ -1,25 +1,46 @@
 <div class="container">
-    <div class="card">
-        <div class="card-header">
-            <h3>Agregar Libro</h3>
-        </div>
+  <div class="card">
+    <div class="card-header">
+      <h3>Agregar Libro</h3>
     </div>
-    <div class="card-body">
-        <form name="formularioLibro" action="">
-            <div class="form-group">
-                <label for="">Titulo:</label>
-                <input type="text" class="form-control" id="title" required [(ngModel)]="book.title" name="title" />
-            </div>
-            <div class="form-group">
-                <label for="">Isbn:</label>
-                <input class="form-control" id="isbn" required [(ngModel)]="book.isbn" name="isbn" />
-            </div>
-            <div class="form-group">
-                <select name="miselect" [(ngModel)]="seleccionado">
-                  <option [value]="item" *ngFor="let item of autores">{{item}}</option>
-            </select>
-            </div>
-        </form>
-        <button type="button" (click)="GuardarLibro()" class="btn btn-danger">Guardar</button>
-    </div>
+  </div>
+  <div class="card-body">
+    <form name="formularioLibro" action="">
+      <div class="form-group">
+        <label for="">Titulo:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          required
+          [(ngModel)]="book.title"
+          name="title"
+        />
+      </div>
+      <div class="form-group">
+        <label for="">Isbn:</label>
+        <input
+          class="form-control"
+          id="isbn"
+          required
+          [(ngModel)]="book.isbn"
+          name="isbn"
+        />
+      </div>
+      <h3>Autor</h3>
+
+      <div class="form-group">
+        <select name="miselect" [(ngModel)]="seleccionado">
+          <option [ngValue]="item" *ngFor="let item of autores"
+            >{{ item.first_name }}<span>&nbsp;</span>{{ item.last_name }}
+          </option>
+        </select>
+      </div>
+      {{ seleccionado.first_name }}
+      <p>{{ seleccionado.id }}</p>
+    </form>
+    <button type="button" (click)="GuardarLibro()" class="btn btn-danger">
+      Guardar
+    </button>
+  </div>
 </div>
